--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dev = [
     "msgspec>=0.20.0",
     "pydantic>=2.12.5",
     "pytest-asyncio>=1.3.0",
+    "pytest-cov>=7.0.0",
     "ruff>=0.15.2",
     "ty>=0.0.18",
 ]
