--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,8 @@ jobs:
         run: uv sync --dev
 
       - name: Run pytest
-        run: uv run pytest \
+        run: |
+          uv run pytest \
           --junitxml=test-results.xml \
           --cov=src \
           --cov=tests \
